--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Pyramid",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js"
@@ -11,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2",
+    "http": "^0.0.1-security",
     "socket.io": "^4.8.1"
   }
 }
